1. Added handling to check token consumed or not.
2. Updated swagger definition with new error types
